--- a/ficfetch/core/stylesheet.css
+++ b/ficfetch/core/stylesheet.css
@@ -3,7 +3,6 @@
  * MIT License
  * github.com/filipelinhares/ress
  */html{box-sizing:border-box;overflow-y:scroll;-webkit-text-size-adjust:100%}*,:after,:before{box-sizing:inherit}:after,:before{text-decoration:inherit;vertical-align:inherit}*{background-repeat:no-repeat;padding:0;margin:0}audio:not([controls]){display:none;height:0}hr{overflow:visible}article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary{display:block}small{font-size:80%}[hidden],template{display:none}abbr[title]{border-bottom:1px dotted;text-decoration:none}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:active,a:hover{outline-width:0}code,kbd,pre,samp{font-family:monospace,monospace;overflow-x:auto}pre code{word-wrap:normal;white-space:pre-wrap}b,strong{font-weight:bolder}dfn{font-style:italic}mark{background-color:#ff0;color:#000}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}input{border-radius:0}[type=number]{width:auto}[type=search]{-webkit-appearance:textfield}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}textarea{overflow:auto;resize:vertical}button,input,optgroup,select,textarea{font:inherit}optgroup{font-weight:700}button{overflow:visible}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:0;padding:0}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button:-moz-focusring{outline:1px dotted ButtonText}[type=reset],[type=submit],button,html [type=button]{-webkit-appearance:button}button,select{text-transform:none}button,input,select,textarea{background-color:transparent;border-style:none;color:inherit}select{-moz-appearance:none;-webkit-appearance:none}select::-ms-expand{display:none}select::-ms-value{color:currentColor}legend{border:0;color:inherit;display:table;max-width:100%;white-space:normal}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}::-webkit-input-placeholder{color:inherit;opacity:.54}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}img{border-style:none}progress{vertical-align:baseline}svg:not(:root){overflow:hidden}audio,canvas,progress,video{display:inline-block}@media screen{[hidden~=screen]{display:inherit}[hidden~=screen]:not(:active):not(:focus):not(:target){position:absolute!important;clip:rect(0 0 0 0)!important}}[aria-busy=true]{cursor:progress}[aria-controls]{cursor:pointer}[aria-disabled]{cursor:default}::-moz-selection{background-color:#b3d4fc;color:#fff;text-shadow:none}::selection{background-color:#b3d4fc;color:#fff;text-shadow:none}
-
 body
 {
 	font-size: 14px;
@@ -14,6 +13,8 @@ body
 	padding: 0 2em;
 	min-width: 320px;
 }
+
+
 
 a, a:link, a:visited
 {
@@ -128,9 +129,7 @@ header h1
 	text-align: center;
 	letter-spacing: -0.075em;
 }
-
-
-body.running header
+body.running h1
 {
 	color: #27ae60;
 }
@@ -148,7 +147,6 @@ body.running header
 	FORM
 
 */
-
 .disabled, button:disabled
 {
 	color: rgb(0, 0, 0, .2) !important;
@@ -170,7 +168,6 @@ body.running header
 		margin-right: 0;
 	}
 }
-
 .textbox
 {
 	min-width: 200px;
@@ -179,7 +176,6 @@ body.running header
 	flex-grow: 1;
 	padding: 0 1em;
 }
-
 .button
 {
 	display: inline-block;
@@ -196,28 +192,18 @@ body.running header
 	text-transform: uppercase;
 	font-weight: bold;
 }
-
-.button:not(:disabled):hover
-{
-	
-}
-
 .button .fa
 {
 	margin-right: 0.5em;
 }
-
-
-
 .button.floating
 {
 	transition: box-shadow 100ms ease-in-out;
 	box-shadow: 3px 5px 10px rgba(0, 0, 0, .5);
 }
-.button.floating:not(:disabled):hover {
+.button.floating:not(:disabled):active {
 	box-shadow: 6px 8px 15px rgba(0, 0, 0, .4);
 }
-
 .button.green
 {
 	color: #16A085;
@@ -228,7 +214,6 @@ body.running header
 	STATUS
 
 */
-
 #status
 {
 	padding-top: 4em;
@@ -313,7 +298,6 @@ body.running header
 	DIALOGS
 
 */
-
 .dialog-wrapper
 {
 	position: fixed;
@@ -474,7 +458,7 @@ body.running header
 	padding: 0.25em;
 	bottom: calc(100% + 0.5em);
 	left: 0;
-	width: 100%;
+	max-width: 100%;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 	transform-origin: 32px calc(100% + 8px);
 	transform: scale(0);
@@ -580,4 +564,28 @@ body.running #form .wrapper
 #format-list p:hover
 {
 	background: rgba(0, 0, 0, 0.1);
+}
+/*
+ *
+ * NO JAVASCRIPT
+ *
+*/
+html.no-js .no-js-hide
+{
+	display: none;
+}
+html.no-js body
+{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+}
+html.no-js .no-js-notification
+{
+	display: block;
+}
+.no-js-notification
+{
+	display: none;
 }
