--- a/ficfetch/core/stylesheet.css
+++ b/ficfetch/core/stylesheet.css
@@ -20,6 +20,13 @@ body
 	font-size: 0.8571em;
 	color: #27ae60;
 }
+.notification .fa
+{
+	font-size: 1.5em;
+	position: relative;
+	top: 1px;
+	margin-right: 0.3em;
+}
 
 a, a:link, a:visited
 {
